Revert "Fix overflow issues"
This reverts commit f45d85be05347969628467f2f0c39b1197238bc0.

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   margin: 0;
   top: 0;
   left: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 body{
  width: 99vw; 
@@ -128,7 +128,6 @@ h4{
 }
 section{
   overflow-y: auto;
-  overflow-x: unset;
   /* width: 10rem; */
   overflow-x: unset;
 }
@@ -546,9 +545,4 @@ position: relative;
     font-size: 14px;
     width: fit-content;
   }
-
-  /* #root {
-    width: 100%;
-    margin-inline: auto;
-  } */
  }
